	!!! Changed handling of CSS files to be consitent with templateFiles and javascriptFiles - now being handled via plugin.tx_solr.cssFiles, fixes issue #12761: Pagebrowse css loaded twice, credits Stefan Sprenger
	!!! Replaced search.filter with search.query.filter, adding support for multiple filters through TypoScript
	!! Changed the form command to use the tx_solr_CommandPluginAware interface to make form modifiers aware of the current plugin
	!! Changed pagebrowser template file configuration from search.pagebrowser.templateFeile to templateFiles.pagebrowser
	!! Removed compatibility code for TYPO3 version before 4.5
	! Changed Index Queue tables to use InnoDB engine

	* Added Polish Translations, credits Jan Slusarczyk
	* Added initial API for Index Queue Item Indexing Properties
	* Added tx_solr_indexqueue_Item::getSite()
	* Changed logging of an invalid Index Queue request to also log the request object and Index Queue header
	* Changed logging of failed Index Queue page indexer requests to also log when invalid json was returned
	* Added method tx_solr_Site::getPages() to get all pages (page IDs) of a site
	* Refactored initialization of the Index Queue to be more modular and allow finer control over what goes into the Index Queue
	* Added a column in the Index Queue table to signal that an item has additional indexing properties
	* Added a column in the Index Queue indexing properties table to identify which site a property belongs to
	* Changed the Index Queue to also remove indexing properties for existing Index Queue items when clearing the queue
	* Added support for persisting indexing properties of Index Queue items
	* Added Index Queue support for resolving Mount Pages and adding them to the queue
	* Added lazy loading for Index Queue item record data
	* Added granular settings for logging Index Queue indexing
	* Fixed missing item_uid / record uid in tx_solr_indexqueue_Item
	* Added tx_solr_indexqueue_Item::hasIndexingProperty()